<resources>
    <string name="app_name">mobile_app_development</string>
    <string name="sign_up_pag">Sign Up Page</string>
    <string name="turn_pages_">turn_page</string>
    <string name="todo">TODO</string>
    <string name="about_us">About Us</string>
    <string name="subtitle">.   Library Buddy is a digital gateway to the world of books and learning. At the heart of our mission is a commitment to fostering a love for reading and making it easier for everyone to access a vast repository of knowledge and entertainment. Our journey began with a simple yet powerful vision: to create a bridge between book lovers and the books they cherish. LibraryBuddy is more than just an app; it\'s a community, a haven for bibliophiles, and a treasure trove for curious minds. Built on cutting-edge technology, our app offers a seamless and user-friendly experience that brings the library to your fingertips. Whether you\'re searching for the latest bestsellers, timeless classics, or academic texts, LibraryBuddy is your reliable companion. Our diverse collection is carefully curated to cater to all ages, interests, and academic needs. With our app, users can easily view, search, and borrow books, immersing themselves in stories and knowledge from the comfort of their homes or on the go. At LibraryBuddy, we believe in the power of reading to inspire, educate, and transform. We are committed to continually expanding our offerings and innovating our services to meet and exceed the expectations of our cherished community of readers. Join us on this remarkable literary journey and rediscover the joy of reading with LibraryBuddy.</string>
    <string name="tell">Welcome to LibraryBuddy</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sign Up</string>
    <string name="opt_sign_in">If you already have an account? | Sign In</string>
    <string name="book_lover">Book Lover</string>
    <string name="username">Username</string>
    <string name="username_image">UsernameImg\n</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="home_page">Home Page</string>
    <string name="todo1">TODO</string>
    <string name="book_page" />
    <string name="librarybuddy" />
    <string name="hello" />
    <string name="turn_pages_turn_heads_turn_lives">Turn Pages, Turn Heads, Turn Lives.</string>
    <string name="library_buddy">Library Buddy</string>
    <string name="study_now">Study Now</string>
    <string name="new_book">New Book</string>
    <string name="see_all">See all</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_don_t_have_an_account">if you don\'t have an account ?</string>
    <string name="librarybuddy1">Librarybuddy</string>
    <string name="update">Update</string>
    <string name="book_title">Title</string>
    <string name="category">Category</string>
    <string name="books_subtitle">Subtilte</string>
    <string name="browes_image">Browes image</string>
    <string name="rating_books">Rate books</string>
    <string name="description">Description</string>
    <string name="story">Story</string>
    <string name="button_update">Update</string>
    <string name="category_1">Category 1</string>
    <string name="app_version">1.6.801</string>
    <string name="version">Version</string>
    <string name="admin">Admin</string>
    <string name="about">About</string>
    <string name="add_new_book">Add new book</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="category_2">Category 2</string>
    <string name="edit">Edit</string>
    <string name="dialog_start_game">Confirm!\n\nAre you sure to logout an account?</string>
    <string name="start">Okay</string>
    <string name="cancel">Cancel\n</string>
    <string name="title">Title:</string>
    <string name="rate">Rate:</string>
    <string name="none">None</string>
    <string name="read_book">Read Book</string>
    <string name="view_all">View All</string>
    <string name="loading">Loading...</string>
    <string name="user">User</string>
    <string name="search_text">Search</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="delete">Delete</string>
    <string name="image_preview" />
    <string name="page_1">Page 1</string>
    <string name="next">Next</string>
    <string name="rating">Rating:</string>
    <string name="update_info">Update Info</string>
    <string name="update_book">Update Book</string>
</resources>