<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:pointerIcon="context_menu"
    tools:context=".modules.screens.SignUpScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/book_lover"
        app:srcCompat="@drawable/book_lover_" />



        <TextView
            android:id="@+id/textView1"
            style="@style/FormLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="9dp"
            android:text="@string/sign_up_pag"
            android:textColor="#F48B6A"
            android:textSize="27sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck"
            tools:text="@string/sign_up_pag" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">


            <EditText
                android:id="@+id/textInputEditText"
                style="@style/FormLable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_round"
                android:backgroundTint="#EDEAEA"
                android:drawableEnd="@mipmap/account_outline_icon"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="#262626"
                android:textSize="16sp"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="18dp">


            <EditText
                android:id="@+id/textInputEditText2"
                style="@style/FormLable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_round"
                android:backgroundTint="#EDEAEA"
                android:drawableEnd="@mipmap/email_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#262626"
                android:textSize="16sp"
                tools:ignore="Autofill,TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="18dp">


            <EditText
                android:id="@+id/editTextTextPassword"
                style="@style/FormLable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_round"
                android:backgroundTint="#EDEAEA"
                android:drawableEnd="@mipmap/eye_closed_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="#262626"
                android:textSize="16sp"
                tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">


            <EditText
                android:id="@+id/editTextConfirmPassword"
                style="@style/FormLable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_round"
                android:backgroundTint="#EDEAEA"
                android:drawableEnd="@mipmap/eye_closed_icon"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#262626"
                android:textSize="16sp"
                tools:ignore="Autofill,TouchTargetSizeCheck,TextContrastCheck" />
        </TableRow>


    <Button
        android:id="@+id/button"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="#58B4DD"
        android:text="@string/sign_up"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="#35B5EF"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/sign_up_pag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="top"
            android:shadowColor="#424040"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="0"
            android:text="if you don't have an account ? "
            android:textAlignment="viewStart"
            android:textAppearance="@style/sign_up_pag"
            android:textColor="#555757"
            android:textColorHighlight="#009688"
            android:textSize="16sp"
            tools:ignore="HardcodedText,RtlCompat,VisualLintBounds" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="top"
            android:shadowColor="#3498DB"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="0"
            android:text="@string/login"
            android:textAlignment="viewStart"
            android:textAppearance="@style/sign_up_pag"
            android:textColor="#3498DB"
            android:textColorHighlight="#009688"
            android:textSize="16sp"
            tools:ignore="HardcodedText,InefficientWeight,RtlCompat,VisualLintBounds" />
    </LinearLayout>


</LinearLayout>