<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_popup_update">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/holo_blue_dark"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/update_book"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/book_title"
                        app:hintEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/choose_type_book"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@mipmap/down"
                        android:hint="@string/category" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/books_subtitle" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"

                    android:background="@android:drawable/gallery_thumb"
                    android:contentDescription="@string/image_preview" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/browe_image"
                    android:hint="@string/browes_image"
                    android:inputType="none"
                    android:focusable="false"
                    android:onClick="openFileChooser" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rating_books" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_des"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_story"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="start|top"
                    android:hint="@string/story"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"

            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"/>

        <ProgressBar
            android:id="@+id/progressBar3"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>